# thirtyfour_sync

./: .gitignore  Cargo.toml  NOTICE  README.md
examples/: chrome_devtools.rs  sync.rs
examples/query/: wikipedia.rs
src/: action_chain.rs  alert.rs  lib.rs  session.rs  switch_to.rs  webdriver.rs  webdrivercommands.rs  webelement.rs
src/components/: select.rs
src/extensions/chrome/: devtools.rs
src/http/: connection_sync.rs  nulldriver_sync.rs  reqwest_sync.rs
src/query/: conditions.rs  element_query.rs  element_waiter.rs  mod.rs  poller.rs
